  ~ 8 magic equips:
   > Comet Charm
   > Magic Coin
   > Elemental Lace
   > Conjurer's Harp
   > Orb of Wrath
   > Orb of Protection
   > Dark Orb (Tome)
   > Wyvern's Fury (Tome)
  ~ 3 powers:
   > [REDACTED RESISTANCE]
   > [REDACTED WISDOM]
   > [REDACTED SPIRIT]
  ~ 5 vanities:
   > Bandito Outfit
   > Cavalier Outfit
   > Sorcerer Outfit
   > Bishop Outfit
   > Scapegrace Outfit
 - Added 37 new enemies:
  ~ Tortured Soul
  ~ Will o' Wisp
  ~ Fire Spirit
  ~ [REDACTED GENERAL]
  ~ Darkhound
  ~ Beet Boxer
  ~ Feral Bat
  ~ Baby Turtle
  ~ Giant Turtle
  ~ Wind Spirit
  ~ Flytrap
  ~ Horrorspore
  ~ Tarantula
  ~ Baby Ent
  ~ Earth Spirit
  ~ Baby Dragon
  ~ [REDACTED DRAGON]
  ~ [REDACTED BAT]
  ~ [REDACTED SPIRIT]
  ~ [REDACTED SPIRIT]
  ~ [REDACTED SPIRIT]
  ~ [REDACTED SPIRIT]
  ~ Ice Slime
  ~ Ice Golem
  ~ Chilling Apparition
  ~ Werewolf
  ~ Mimic
  ~ Sahuagin
  ~ Jellyfish
  ~ Water Spirit
  ~ Gazer
  ~ Parasite
  ~ Poltergeist
  ~ [REDACTED]
  ~ Attacker Tellurium Golem
  ~ Defender Tellurium Golem
  ~ [REDACTED BIRD]

Changes:
 - Recapped the max level from level 20 to level 25.
 - Replaced the Mage class's 2nd magic equip slot with an offhand slot (light shields).
 - The game's icons have finally been resprited at a non-blurred 32px resolution. Many items have additionally had their icons changed to stand out a bit more.
 - Skill families will now be condensed into a single dropdown. Old save patching must be enabled when updating for this to work properly.
 - Completed the salvaging system. Many items throughout the entire game are now salvageable, making the system much more relevant.
 - Greatly reduced respawn timers of most time-based respawnables.
 - Changed up the preloader / title screen background.
 - Reverted most dungeons back to the old dungeon map border style (same as the indoors style).
 - Many shops have had their stock changed. Some enemy drop pools have also been adjusted.