@@ -3066,7 +3066,7 @@
       "type": 0,
       "variance": 20
     },
-    "description": "Some simple uncooked meat from an average-sized animal. It's\nunsafe to eat raw, but it's great for cooking. \\c[31]+20 HP\\c[0]",
+    "description": "Some simple uncooked meat from an average-sized bear. It's\nunsafe to eat raw, but it's great for cooking. \\c[31]+20 HP\\c[0]",
     "effects": [
       {
         "code": 11,
@@ -3084,7 +3084,7 @@
     "hitType": 0,
     "iconIndex": 291,
     "itypeId": 1,
-    "name": "Raw Meat",
+    "name": "Raw Bear Meat",
     "note": "<Menu Category: Materials, Recovery, Debuffs>",
     "occasion": 0,
     "price": 30,
@@ -3123,8 +3123,8 @@
     "hitType": 0,
     "iconIndex": 669,
     "itypeId": 1,
-    "name": "Salt-Grilled Meat",
-    "note": "<Menu Category: Recovery, Buffs>\n\n<Synthesis Ingredients>\nRaw Meat: 1\nSalt: 2\n</Synthesis Ingredients>\n<Mask Name: Preserved Food>\n<Synthesis SE: Fire2>",
+    "name": "Salt-Grilled Bear Meat",
+    "note": "<Menu Category: Recovery, Buffs>\n\n<Synthesis Ingredients>\nRaw Bear Meat: 1\nSalt: 2\n</Synthesis Ingredients>\n<Mask Name: Preserved Food>\n<Synthesis SE: Fire2>",
     "occasion": 0,
     "price": 50,
     "repeats": 1,
