@@ -225,7 +225,7 @@ Additions:
    > Sorcerer Outfit
    > Bishop Outfit
    > Scapegrace Outfit
- - Added 37 new enemies:
+ - Added 38 new enemies:
   ~ Tortured Soul
   ~ Will o' Wisp
   ~ Fire Spirit
@@ -250,6 +250,7 @@ Additions:
   ~ [REDACTED SPIRIT]
   ~ Ice Slime
   ~ Ice Golem
+  ~ Polar Bear
   ~ Chilling Apparition
   ~ Werewolf
   ~ Mimic
